--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,7 +2,7 @@
     <div class="logo-container">
         <img src="/img/aaramkhor_logo.png">
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/guide">CRM</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
