--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,6 +4,7 @@
 <head>
     {{>links}}
     {{>metas}}
+
     <title>Aaramkhor CRM</title>
 </head>
 
@@ -11,6 +12,7 @@
     {{>header}}
     <h2>{{page}}</h2>
     <div class="table-responsive">
+        <form></form>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -20,6 +22,7 @@
                     <th scope="col">Customer</th>
                     <th scope="col">Email</th>
                     <th scope="col">Phone</th>
+                    <th scope="col">Consignment No.</th>
                 </tr>
             </thead>
             <tbody>
@@ -30,6 +33,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -38,6 +42,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -46,6 +51,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -54,6 +60,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -62,6 +69,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -70,6 +78,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -78,6 +87,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -86,6 +96,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -94,6 +105,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -102,6 +114,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -110,6 +123,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -118,6 +132,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -126,6 +141,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -134,6 +150,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -142,6 +159,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -150,6 +168,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -158,6 +177,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -166,6 +186,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -174,6 +195,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -182,6 +204,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -190,6 +213,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -198,6 +222,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -206,6 +231,7 @@
                     <td>Tharun</td>
                     <td>@mdo</td>
                     <td>9962326281</td>
+                    <td contenteditable="true"></td>
                 </tr>
             </tbody>
         </table>
