--- a/templates/partials/scripts.hbs
+++ b/templates/partials/scripts.hbs
@@ -26,4 +26,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script> --}}
+<script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/js/clientapp.js"></script>
