--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,8 +13,8 @@
     <h2>{{page}}</h2>
     <div class="table-responsive">
         <form></form>
-        <table class="table table-hover">
-            <thead>
+        <table class="table table-hover workspace-table">
+            <thead class="--workspace-table-header">
                 <tr>
                     <th scope="col">S No.</th>
                     <th scope="col">Order No.</th>
@@ -25,8 +25,17 @@
                     <th scope="col">Consignment No.</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="--workspace-table-body">
                 <tr>
+                    <th scope="row">1</th>
+                    <td>12345</td>
+                    <td>t-shirt</td>
+                    <td>Tharun</td>
+                    <td>@mdo</td>
+                    <td>9962326281</td>
+                    <td contenteditable="true"></td>
+                </tr>
+                {{!-- <tr>
                     <th scope="row">1</th>
                     <td>12345</td>
                     <td>t-shirt</td>
@@ -223,16 +232,7 @@
                     <td>@mdo</td>
                     <td>9962326281</td>
                     <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
+                </tr> --}}
             </tbody>
         </table>
     </div>
