--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -60,8 +60,11 @@ article, aside, dialog, figcaption, figure, header, hgroup, main, nav, section {
 
 footer{
   padding-top: 2rem;
-  bottom: 0;
-  position: fixed;
+  bottom: 1px;
+  /* border-top: rgb(128, 128, 128); */
+  margin-bottom: 5px;
+  font-size: small;
+  /* position: fixed; */
 }
 
 body {
