--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,6 @@
     {{>header}}
     <h2>{{page}}</h2>
     <div class="table-responsive">
-        <form></form>
         <table class="table table-hover workspace-table">
             <thead class="--workspace-table-header">
                 <tr>
@@ -22,217 +21,12 @@
                     <th scope="col">Customer</th>
                     <th scope="col">Email</th>
                     <th scope="col">Phone</th>
+                    <th scope="col">Created At</th>
                     <th scope="col">Consignment No.</th>
                 </tr>
             </thead>
             <tbody class="--workspace-table-body">
-                {{!-- <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr> --}}
-                {{!-- <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>12345</td>
-                    <td>t-shirt</td>
-                    <td>Tharun</td>
-                    <td>@mdo</td>
-                    <td>9962326281</td>
-                    <td contenteditable="true"></td>
-                </tr> --}}
+
             </tbody>
         </table>
     </div>
